# NeuralNetwork-Kevin-

./: .gitignore  CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  README.md  a.out  main.cpp  test.cpp
docs/de/: NeuralNetworks.md  README.md
docs/en/: NeuralNetworks.md
include/: Layer.h  NeuralNetwork.h  Neuron.h
org/: NeuralNetwork.org.cpp  main.org.cpp
src/: Layer.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
